# intelligent-manifest-builder

./: .gitignore  Dockerfile  Makefile  README.md  VERSION  imb.py  imb_tui.py  oimb.yaml  opsani.env.example  pyproject.toml  requirements.txt  run_imb_incluster_overrides.json  run_imb_noinstall.py  setup.py
.devcontainer/: Dockerfile  devcontainer.json
imb/: imb.py  imb_kubernetes.py  imb_main.py  imb_prometheus.py  imb_tui.py  imb_vegeta.py  imb_yaml.py  servo_manifests.py
imb-resources/: README.md  opsani-imb-rbac.yaml  run_imb_incluster_overrides.json
sandbox/: multi-cont-deployment.yaml  test-deployment.yaml
submodules/: imb_kubernetes.py  imb_prometheus.py  imb_vegeta.py
template/: oimb.yaml
