[tool.poetry]
name = "intelligent-manifest-builder"
version = "0.1.0"
description = "Configuration discovery for Opsani"
authors = ["Blake Watters <blakewatters@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
kubernetes = "^11.0.0"
prompt-toolkit = "^3.0.5"
pyyaml = "^5.3.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
